# pimd-b

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu.yml
cmake/modules/: FindFFTW3.cmake  FindMPI.cmake
include/: RPC_simulation.h  bosonic_exchange.h  bosonic_exchange_CPM.h  bosonic_exchange_PIS.h  bosonic_exchange_base.h  bosonic_exchange_carrousel.h  bosonic_exchange_shuffle.h  common.h  dumps.h  momentum_initializers.h  normal_modes.h  observable.h  observables.h  observables_logger.h  old_bosonic_exchange.h  params.h  pimdb.h  position_initializers.h  potential.h  potentials.h  propagator.h  propagators.h  ring_polymer_utils.h  simulation.h  state.h  states.h  thermostat.h  thermostat_contexts.h  thermostat_coupling.h  thermostats.h  units.h  walkers_communication.h  winding.h
include/bosonic_exchange/: bosonic_exchange_base.h  factorial_bosonic_exchange.h  old_bosonic_exchange.h  quadratic_bosonic_exchange.h
include/contexts/: bosonic_exchange_context.h  normal_modes_context.h  propagator_context.h
include/core/: exchange_state.h  force_field_manager.h  random_generators.h  simulation_config.h  simulation_resources.h  system_state.h
include/dumps/: dump.h  force_dump.h  position_dump.h  velocity_dump.h
include/initializers/: grid_position_initializer.h  manual_momentum_initializer.h  mb_momentum_initializer.h  momentum_initializer.h  position_initializer.h  random_position_initializer.h  xyz_position_initializer.h
include/observables/: GSF_action.h  bosonic.h  bosonic_observable.h  classical.h  classical_observable.h  energy.h  energy_observable.h  gsf_action.h  gsf_action_observable.h  observable.h  quantum.h  walkers.h
include/potentials/: aziz.h  aziz_potential.h  cosine.h  dipole.h  double_well.h  harmonic.h  harmonic_potential.h  potential.h
include/propagators/: cartesian_propagator.h  normal_modes_propagator.h  propagator.h  velocity_verlet.h  velocity_verlet_propagator.h
include/states/: force.h  position.h  state.h  velocity.h
include/thermostats/: langevin.h  langevin_thermostat.h  nose_hoover.h  nose_hoover_thermostat.h  thermostat.h  thermostat_coupling.h
include/walkers/: roulette_splitting.h  roulette_splitting_cycle_prob.h  walkers_communication_base.h
libs/: inireader.cpp  inireader.h  random_mars.cpp  random_mars.h  random_park.cpp  random_park.h  string_utils.cpp  string_utils.h
src/: RPC_simulation.cpp  bosonic_exchange.cpp  bosonic_exchange_CPM.cpp  bosonic_exchange_PIS.cpp  bosonic_exchange_base.cpp  bosonic_exchange_carrousel.cpp  bosonic_exchange_shuffle.cpp  common.cpp  normal_modes.cpp  observable.cpp  observables_logger.cpp  old_bosonic_exchange.cpp  params.cpp  pimdb.cpp  potential.cpp  propagator.cpp  ring_polymer_utils.cpp  simulation.cpp  state.cpp  thermostat.cpp  thermostat_coupling.cpp  units.cpp
src/bosonic_exchange/: bosonic_exchange_base.cpp  factorial_bosonic_exchange.cpp  old_bosonic_exchange.cpp  quadratic_bosonic_exchange.cpp
src/core/: exchange_state.cpp  force_field_manager.cpp  random_generators.cpp  system_state.cpp
src/dumps/: dump.cpp  force_dump.cpp  position_dump.cpp  velocity_dump.cpp
src/initializers/: grid_position_initializer.cpp  manual_momentum_initializer.cpp  mb_momentum_initializer.cpp  random_position_initializer.cpp  xyz_position_initializer.cpp
src/observables/: GSF_action.cpp  bosonic.cpp  bosonic_observable.cpp  classical.cpp  classical_observable.cpp  energy.cpp  energy_observable.cpp  gsf_action.cpp  gsf_action_observable.cpp  observable.cpp  quantum.cpp  walkers.cpp
src/potentials/: aziz.cpp  aziz_potential.cpp  cosine.cpp  cosine_potential.cpp  (+7 more)
tests/: main.py  requirements.txt
(+155 files in other folders)
